<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuracion">

    <Button
        android:id="@+id/btnContactos"
        android:layout_width="170dp"
        android:layout_height="79dp"
        android:layout_marginTop="64dp"
        android:text="@string/btnSeleccionarContactos"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactos"
        android:layout_width="292dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/lblContactos"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContactos" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="283dp"
        android:layout_height="173dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactos" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="313dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:text="@string/ActivarNotificaciones"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:onClick="regresar_menu"
        android:text="@string/btnMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.323" />

    <Button
        android:id="@+id/btnSalirConfig"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:onClick="salirConfig"
        android:text="@string/btnSalir"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMenu"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.32" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="114dp"
        android:layout_height="77dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/btnContactos"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_azul" />
</androidx.constraintlayout.widget.ConstraintLayout>